--- a/MedOfficeWebApplication/Views/Branches/Index.cshtml
+++ b/MedOfficeWebApplication/Views/Branches/Index.cshtml
@@ -1,33 +1,31 @@
 ﻿@model IEnumerable<MedOfficeWebApplication.Branch>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Add New Branch";
 }
 
-<h2>Index</h2>
+<h2>Branches</h2>
 
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
+
 <table class="table">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.Name)
+            Name
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.AddressLine1)
+            Address Line 1
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.AddressLine2)
+            Address Line 2
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.City)
+            City
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.StateProvince)
+           State
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.ZipCode)
+           Zip Code
         </th>
         <th></th>
     </tr>
