--- a/MedOfficeWebApplication/Views/Branches/Index.cshtml
+++ b/MedOfficeWebApplication/Views/Branches/Index.cshtml
@@ -6,7 +6,6 @@
 
 <h2>Branches</h2>
 
-
 <table class="table">
     <tr>
         <th>
@@ -29,6 +28,8 @@
         </th>
         <th></th>
     </tr>
+    </table>
+
 
 @foreach (var item in Model) {
     <tr>
